<resources>
    <string name="app_name">proyectofinal</string>
    <!-- TODO: Remove or change this placeholder text -->

    <!-- ********* Login Activity ************** -->
    <!-- Login Fragment Form -->
    <string name="title_login">Enter your access data</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="button_login">Log in</string>
    <string name="register_link">Have you not registered yet?</string>
    <string name="login_empty">Enter your username and password</string>

    <!-- Register Fragment Form -->
    <string name="title_register">Register your data</string>
    <string name="name">Name</string>
    <string name="secondname">Second name</string>
    <string name="email">e-mail</string>
    <string name="sex_label">Indicate your gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="set_password">Set your password</string>
    <string name="confirm_password">Confirm your password</string>
    <string name="error_messages">Missing entry</string>
    <string name="button_register">Register</string>
    <string name="buton_cancel">Cancel</string>

    <!-- ********* Loged Activity ************** -->
    <string name="name_label">Name</string>
    <string name="user_label">User</string>
    <string name="email_label">Email</string>
    <string name="sex_label_welcome">Gender</string>
    <string name="title_welcome">Welcome</string>
    <string name="button_exit">Log out</string>
    <string name="logout_message">Has logged out</string>
</resources>