<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    tools:context=".ReceiveParamsFragment">
    <!-- GUIDELINES FRAME -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glStart"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="60dp"
        android:layout_marginStart="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glEnd"
        android:orientation="vertical"
        app:layout_constraintGuide_end="60dp"
        android:layout_marginStart="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glTop"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="40dp"
        android:layout_marginStart="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glBottom"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="40dp"
        android:layout_marginStart="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <!--GUIDELINES FORM-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glStartForm"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="80dp"
        android:layout_marginStart="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glEndForm"
        android:orientation="vertical"
        app:layout_constraintGuide_end="80dp"
        android:layout_marginStart="40dp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glTopForm"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glBottomForm"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <!-- INTERFACE ELEMENTS -->
    <ImageView
        android:id="@+id/ivLogo"
        android:src="@drawable/logo"
        app:layout_constraintTop_toBottomOf="@+id/glTop"
        app:layout_constraintStart_toEndOf="@+id/glStart"
        app:layout_constraintEnd_toStartOf="@+id/glEnd"
        android:layout_marginHorizontal="70dp"
        android:layout_width="0dp"
        android:layout_height="110dp" />
    <TextView
        android:id="@+id/tvHeader"
        app:layout_constraintTop_toBottomOf="@id/ivLogo"
        android:text="@string/title_register"
        style="@style/TitleTextStyle"
        android:layout_width="match_parent"
        android:layout_height="35dp" />
    <EditText
        android:id="@+id/etUser"
        android:hint="@string/user"
        style="@style/InputStyle"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/tvHeader"
        app:layout_constraintStart_toEndOf="@+id/glStartForm"
        app:layout_constraintEnd_toStartOf="@+id/glEndForm"
        android:layout_width="0dp"
        android:layout_height="50dp" />
    <EditText
        android:id="@+id/etName"
        android:hint="@string/name"
        style="@style/InputStyle"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/etUser"

        app:layout_constraintStart_toEndOf="@+id/glStartForm"
        app:layout_constraintEnd_toStartOf="@+id/glEndForm"
        android:layout_width="0dp"
        android:layout_height="50dp" />

    <EditText
        android:id="@+id/etSecondName"
        android:hint="@string/secondname"
        style="@style/InputStyle"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/etName"
        app:layout_constraintStart_toEndOf="@+id/glStartForm"
        app:layout_constraintEnd_toStartOf="@+id/glEndForm"
        android:layout_width="0dp"
        android:layout_height="50dp" />
    <EditText
        android:id="@+id/etEmail"
        android:hint="@string/email"
        style="@style/InputStyle"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/etSecondName"
        app:layout_constraintStart_toEndOf="@+id/glStartForm"
        app:layout_constraintEnd_toStartOf="@+id/glEndForm"
        android:layout_width="0dp"
        android:layout_height="50dp" />
    <TextView
        android:id="@+id/tvSex"
        android:text="@string/sex_label"
        android:inputType="textEmailAddress"
        android:textStyle="bold"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        app:layout_constraintStart_toEndOf="@+id/glStartForm"
        app:layout_constraintEnd_toStartOf="@+id/glEndForm"
        android:layout_marginTop="10dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:id="@+id/rgSex"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/tvSex"
        app:layout_constraintStart_toEndOf="@+id/glStartForm"
        app:layout_constraintEnd_toStartOf="@+id/glEndForm"
        android:layout_width="0dp"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/rbWomen"
            android:text="@string/female"

            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/rbMen"
            android:text="@string/male"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RadioGroup>
    <EditText
        android:id="@+id/etPass"
        android:inputType="textPassword"
        android:hint="@string/set_password"
        style="@style/InputStyle"
        app:layout_constraintTop_toBottomOf="@+id/rgSex"
        app:layout_constraintStart_toEndOf="@+id/glStartForm"
        app:layout_constraintEnd_toStartOf="@+id/glEndForm"
        android:layout_width="0dp"
        android:layout_height="50dp" />
    <EditText
        android:id="@+id/etPassConfirm"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"
        style="@style/InputStyle"
        app:layout_constraintTop_toBottomOf="@+id/etPass"
        app:layout_constraintStart_toEndOf="@+id/glStartForm"
        app:layout_constraintEnd_toStartOf="@+id/glEndForm"
        android:layout_width="0dp"
        android:layout_height="50dp" />
    <TextView
        android:id="@+id/tvMessages"
        android:text="@string/error_messages"
        android:textSize="15dp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@+id/etPassConfirm"
        app:layout_constraintStart_toEndOf="@+id/glStartForm"
        app:layout_constraintEnd_toStartOf="@+id/glEndForm" />

    <Button
        android:id="@+id/btCancel"

        android:backgroundTint="@color/material_dynamic_secondary40"
        app:layout_constraintTop_toBottomOf="@+id/tvMessages"
        app:layout_constraintStart_toEndOf="@id/glStartForm"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buton_cancel" />
    <Button
        android:id="@+id/btRegister"

        android:backgroundTint="@color/turquoise"
        app:layout_constraintTop_toBottomOf="@+id/tvMessages"
        app:layout_constraintEnd_toStartOf="@+id/glEndForm"

        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_register" />


</androidx.constraintlayout.widget.ConstraintLayout>